@@ -1,3 +1,6 @@
+* Added UDF for collection (SPARKC-225)
+
+
 1.3.0
  * Remove white spaces in c* connection host string (fix by Noorul Islam K M)
  * Included from 1.2.5
